      - 'module' causes all documents to be considered modules;
      - 'auto' is an explicit request to use perlcritic's normal document type
        logic, and is the default.
    * The framework that we use to test Perl::Critic has been packaged into
      a convenient module that you can use to test your own Policies.  See
      Test::Perl::Critic::Policy for details.

    Policy Changes:
    * NamingConventions::Capitalization got confused when a single "use
      constant" declared multiple constants.  Reported by Kevin Ryde,
      RT #44987.

    Other Changes:
    * The PolicySummary.pod file is now generated when the distribution
      is created, rather than when you install it.  This ensures the file
      will be available on http://search.cpan.org.  Thanks to Bear Longyear
      for brigning this to our attention.

[1.105] Released on 2009-09-07

    Bug Fixes:
    * Variables::ProhibitPunctuationVars would complain about "%-" appearing
      anywhere in a string.  RT #49016

    Policy Changes:
    * InputOutput::RequireCheckedSyscalls now complains about unchecked "say"
      by default.  RT #37487

[1.104] Released on 2009-08-23

    This release is dedicated to Tom Wyant in appreciation of the amount of
    effort he put into the enhancements and bug fixes in this release, for
    having the patience to wait for the amount of time that it took to get
    them out, and for overall awesomeness.  Thank you, Tom.

    New Policies:
      Objects::ProhibitIndirectSyntax
      ValuesAndExpressions::ProhibitComplexVersion
      ValuesAndExpressions::RequireConstantVersion

    New Optional Requirement:
    * Email::Address, if you want
      ValuesAndExpressions::ProhibitInterpolationOfLiterals to properly ignore
      email addresses.

    New Features:
    * Perlcritic will list the names of files with violations if given the
      --files-with-violations option, or the names of files without